2003-02-23 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* configure.in: Bumped version to 20030223

2003-02-11 Egil Kvaleberg   <egil@kvaleberg.no>
 
       * symbols/symbols.tex: Footprint naming conventions.

       * atttribute/attribute.tex: Ref. to Footprint naming conventions.

2003-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

	* Makefile.am: Fixed the distclean-local target.

2002-12-01 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* fileformats/fileformats.tex: Finished up first draft of latex
	version of this document.

2002-11-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* aclocal.m4: Removed file from cvs.

	* fileformats/fileformats.html: Applied doc patch from Egil (was
	associated with the unapplied bus ripper support patch)

	* fileformats/Makefile.am: Updated Makefile to be the latex source ->
	everything else type.

	* fileformats/fileformats.tex: Started converting html into tex.
	Updating documentation as I go.  Not complete yet.
	
2002-11-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* symbols/Makefile.am, attributes/Makefile.am: Changed the mkdir
	to an install and looped over and install all the htmls files. 
	Also added the uninstall hook.

2002-11-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Updated version to 20021103 (an official version)

	* configure.in: Changed some of the AC_MSG_ERROR lines to just
	echos, this will allow me to distribute prebuilt docs and still
	use the configure mechanism

	* symbols/Makefile.am, attributes/Makefile.am: Attempted to get
	the dist target to include all the built documentation. 

2002-10-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, Makefile.am: Updates to get things working a little
	more smoothly

	* symbols/symbols.tex, 7400a.eps, 7400b.eps: Fixed example to 
	actually be a correct symbol (first version had a duplicate net=
	pin value for both power and gnd).  Pointed out by Werner Hoch
	
	* symbols/Makefile.am, attributes.am: Further refined clean rules
