@@ -57,11 +57,20 @@ fi
 
 
 # Other variables
-gedatopdir=`$GESYMCONFIG --toplevel`
-GEDADATADIR=$gedatopdir
-AC_DEFINE_UNQUOTED(GEDADATADIR, "$gedatopdir")
+#
 
-AC_SUBST(GEDADATADIR)
+# Expand the prefix variable
+# I don't like the way this is done, but it works (I hope).
+if eval "test x$prefix = xNONE"; then
+ dprefix=$ac_default_prefix
+else
+ dprefix=$prefix
+fi
+
+gedadocdir=$dprefix/share/doc/geda-doc
+expandgedadocdir=`echo $gedadocdir`
+GEDADOCDIR=$expandgedadocdir
+AC_SUBST(GEDADOCDIR)
 
 AC_CONFIG_FILES([Makefile \
 	         attributes/Makefile \
