@@ -1,4 +1,14 @@
 2003-02-23 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* configure.in: Added shell code to expand prefix and set the
+	GEDADOCDIR to the right install directory for documentation
+
+	* */Makefile.am: Changed all Makefiles to install into GEDADOCDIR
+
+	* attributes/attributes.tex: Added author=, email=, and comment=
+	attribute descriptions.
+
+2003-02-19 Ales Hvezda   <ahvezda@geda.seul.org>
 	
 	* configure.in: Bumped version to 20030223
 
